增加独立的Bs.sln

--- a/Client/Bs.Fuwu.Droid/Bs.Fuwu.Droid.csproj
+++ b/Client/Bs.Fuwu.Droid/Bs.Fuwu.Droid.csproj
@@ -43,11 +43,13 @@
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
-    <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
+    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <AotAssemblies>true</AotAssemblies>
-    <EnableLLVM>true</EnableLLVM>
+    <EnableLLVM>false</EnableLLVM>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>   
+    <AndroidSupportedAbis />
+    <BundleAssemblies>true</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -63,7 +65,9 @@
       <Link>App.xaml.cs</Link>
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="..\Common\MainActivity.cs">
+      <Link>MainActivity.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
   </ItemGroup>
@@ -129,14 +133,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Common\AboutResources.txt">
-      <Link>Resources\AboutResources.txt</Link>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Common\AboutAssets.txt">
-      <Link>Assets\AboutAssets.txt</Link>
-    </None>
+    <Content Include="..\Common\Android说明.txt">
+      <Link>Android说明.txt</Link>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
    <!-- This will force the generation of the APK when not building inside visual studio -->
