--- a/Client/Bs.Mgr.iOS/Info.plist
+++ b/Client/Bs.Mgr.iOS/Info.plist
@@ -5,13 +5,15 @@
 	<key>CFBundleDisplayName</key>
 	<string>百岁管理</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.modern.Dt</string>
+	<string>dt.Bs.Mgr</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MinimumOSVersion</key>
+	<string>8.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -19,6 +21,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -33,22 +36,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>Picture Picker uses photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Picture Picker uses photo library</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Fonts/icon.ttf</string>
 		<string>Fonts/winjs-symbols.ttf</string>
 	</array>
-	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcons.appiconset</string>
-	<key>XSLaunchImageAssets</key>
-	<string>Assets.xcassets/LaunchImages.launchimage</string>
-	<key>CFBundleIconFiles</key>
-	<array/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
+  <key>UILaunchStoryboardName</key>
+  <string>LaunchScreen</string>
 </dict>
 </plist>
