--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -48,7 +48,7 @@
     <AotAssemblies>true</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
-    <MandroidI18n />
+    <AndroidSupportedAbis />
     <BundleAssemblies>true</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
@@ -65,7 +65,9 @@
       <Link>App.xaml.cs</Link>
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="..\Common\MainActivity.cs">
+      <Link>MainActivity.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
   </ItemGroup>
@@ -131,14 +133,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Common\AboutResources.txt">
-      <Link>Resources\AboutResources.txt</Link>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Common\AboutAssets.txt">
-      <Link>Assets\AboutAssets.txt</Link>
-    </None>
+    <Content Include="..\Common\Android说明.txt">
+      <Link>Android说明.txt</Link>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- This will force the generation of the APK when not building inside visual studio -->
