--- a/Client/Bs.Kehu.Droid/Bs.Kehu.Droid.csproj
+++ b/Client/Bs.Kehu.Droid/Bs.Kehu.Droid.csproj
@@ -105,26 +105,24 @@
       <Project>{45e61f03-7bd0-42ad-8319-65e4ed7e2e1d}</Project>
       <Name>Bs.Kehu</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj">
-      <Project>{e3f3c994-17dc-4b65-8a66-f2c70537df7d}</Project>
-      <Name>Dt.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
-      <Project>{7ce3ed41-685e-46bd-ab2f-ab25467cbe35}</Project>
-      <Name>Dt.Cells.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj">
-      <Project>{97eac2fe-30d6-40d8-9fec-a568774d1058}</Project>
-      <Name>Dt.Cells</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj">
-      <Project>{a77e5063-ff97-49f3-aa5e-814baa7a929d}</Project>
-      <Name>Dt.Charts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj">
-      <Project>{7e933aca-685d-4a54-979c-ce83c5cfd2fc}</Project>
-      <Name>Dt.Core</Name>
-    </ProjectReference>
+    <PackageReference Include="Dt.App">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dt.Base">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dt.Cells">
+      <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dt.Cells.Data">
+      <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dt.Charts">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dt.Core">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
@@ -140,9 +138,9 @@
     <AndroidResource Include="Resources\drawable\back.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Common\Android说明.txt">
+    <None Include="..\Common\Android说明.txt">
       <Link>Android说明.txt</Link>
-    </Content>
+    </None>
     <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
