--- a/Client/Bs.Mgr/Bs.Mgr.csproj
+++ b/Client/Bs.Mgr/Bs.Mgr.csproj
@@ -3,8 +3,9 @@
   <Import Project="..\Common\dtc.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
-    <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
+    <PackageReference Include="Dt.App" Version="1.0.0" />
+    <PackageReference Include="Dt.Base" Version="1.0.0" />
+    <PackageReference Include="Dt.Core" Version="1.0.0" />
   </ItemGroup>
+
 </Project>
