--- a/Client/Zend.Uwp/Dt.Zend.Uwp.csproj
+++ b/Client/Zend.Uwp/Dt.Zend.Uwp.csproj
@@ -124,10 +124,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bs.Fuwu\Bs.Fuwu.csproj">
-      <Project>{18a11e35-0fa9-4c6b-88fa-f5c2fb5d565b}</Project>
-      <Name>Bs.Fuwu</Name>
-    </ProjectReference>
     <PackageReference Include="Dt.Base">
       <Version>1.0.0</Version>
     </PackageReference>
@@ -146,6 +142,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Zend\Dt.Zend.csproj">
+      <Project>{e1d59ffe-7b16-4d1f-a54f-156686e66e41}</Project>
+      <Name>Dt.Zend</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
