--- a/Client/Zend.iOS/Dt.Zend.iOS.csproj
+++ b/Client/Zend.iOS/Dt.Zend.iOS.csproj
@@ -81,9 +81,9 @@
     <BundleResource Include="Assets\SplashScreen%402x.png" />
     <BundleResource Include="Assets\SplashScreen%403x.png" />
     <BundleResource Include="Assets\logo.png" />
-    <Content Include="..\Common\iOS说明.txt">
+    <None Include="..\Common\iOS说明.txt">
       <Link>iOS说明.txt</Link>
-    </Content>
+    </None>
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
@@ -142,18 +142,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bs.Fuwu\Bs.Fuwu.csproj">
-      <Project>{37a23d84-e35b-40e3-a4cc-874ac7550191}</Project>
-      <Name>Bs.Fuwu</Name>
-    </ProjectReference>
     <PackageReference Include="Dt.Base">
       <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Dt.Cells">
-      <Version>2.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Dt.Cells.Data">
-      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Dt.Charts">
       <Version>1.0.0</Version>
@@ -161,6 +151,12 @@
     <PackageReference Include="Dt.Core">
       <Version>1.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Zend\Dt.Zend.csproj">
+      <Project>{e1d59ffe-7b16-4d1f-a54f-156686e66e41}</Project>
+      <Name>Dt.Zend</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
