--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid90' or '$(TargetFramework)'=='netstandard2.0' ">
@@ -50,6 +51,10 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'MonoAndroid90' ">
     <Reference Include="Mono.Android" />
+    <PackageReference Include="Xamarin.Android.Support.Compat" Version="28.0.0.3" /> 
+    <PackageReference Include="Xamarin.Android.Support.v7.RecyclerView" Version="28.0.0.3" />
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
+    <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.3" />
   </ItemGroup>
 
   <ItemGroup>
