--- a/Client/Dt.Shell.iOS/Info.plist
+++ b/Client/Dt.Shell.iOS/Info.plist
@@ -49,5 +49,7 @@
 	<string>Assets.xcassets/AppIcons.appiconset</string>
   <key>UILaunchStoryboardName</key>
   <string>LaunchScreen</string>
+  <key>LSSupportsOpeningDocumentsInPlace</key>
+  <true/>
 </dict>
 </plist>
