--- a/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
+++ b/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
@@ -3,5 +3,7 @@
 	<uses-sdk android:minSdkVersion="19" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<application android:label="@string/AppName" android:theme="@style/AppTheme"></application>
 </manifest>
