选择文件、录音合并为CrossKit静态类

--- a/Client/Dt.Shell.iOS/Info.plist
+++ b/Client/Dt.Shell.iOS/Info.plist
@@ -53,5 +53,7 @@
   <true/>
   <key>NSMicrophoneUsageDescription</key>
   <string>请求使用麦克风进行录音</string>
+  <key>NSCameraUsageDescription</key>
+  <string>请求使用摄像头进行拍照</string>
 </dict>
 </plist>
