--- a/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
+++ b/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
@@ -8,5 +8,11 @@
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:label="@string/AppName" android:theme="@style/AppTheme"></application>
+  <uses-feature android:name="android.hardware.camera" android:required="false" />
+  <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+	<application android:label="@string/AppName" android:theme="@style/AppTheme">
+    <provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+      <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+    </provider>
+  </application>
 </manifest>
