--- a/Client/Dt.Shell.iOS/Info.plist
+++ b/Client/Dt.Shell.iOS/Info.plist
@@ -55,5 +55,7 @@
   <string>请求使用麦克风进行录音</string>
   <key>NSCameraUsageDescription</key>
   <string>请求使用摄像头进行拍照</string>
+  <key>CFBundleDevelopmentRegion</key>
+  <string>China</string>
 </dict>
 </plist>
