--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Publish\" />
+  </ItemGroup>
+
 </Project>
