--- a/Service/src/Dt.Pub/Dt.Pub.csproj
+++ b/Service/src/Dt.Pub/Dt.Pub.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
   </ItemGroup>
   
+  <ItemGroup>
+    <Folder Include="Entity\" />
+  </ItemGroup>
+  
 </Project>
