升级到 uno2.4.0, vs16.6, android Q, 福祉堂

--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -1,6 +1,6 @@
 <Project ToolsVersion="Current">
   <PropertyGroup>
-    <TargetFrameworks>uap10.0.18362;monoandroid90;xamarinios10</TargetFrameworks>
+    <TargetFrameworks>uap10.0.18362;monoandroid10.0;xamarinios10</TargetFrameworks>
     <Authors>hdt</Authors>
     <Product>DT业务基础平台</Product>
     <Copyright>Copyright © 2020</Copyright>
@@ -19,7 +19,7 @@
     <DefineConstants>$(DefineConstants);IOS</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'monoandroid90'">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'monoandroid10.0'">
     <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
   </PropertyGroup>
 
@@ -32,11 +32,11 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.1" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid90' or '$(TargetFramework)'=='netstandard2.0' ">
-    <PackageReference Include="Uno.UI" Version="2.2.0" />
+  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' or '$(TargetFramework)'=='netstandard2.0' ">
+    <PackageReference Include="Uno.UI" Version="2.4.0" />
   </ItemGroup>
   
-  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid90' ">
+  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' ">
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -49,12 +49,8 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'MonoAndroid90' ">
+  <ItemGroup Condition="'$(TargetFramework)' == 'monoandroid10.0' ">
     <Reference Include="Mono.Android" />
-    <PackageReference Include="Xamarin.Android.Support.Compat" Version="28.0.0.3" /> 
-    <PackageReference Include="Xamarin.Android.Support.v7.RecyclerView" Version="28.0.0.3" />
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
-    <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.3" />
   </ItemGroup>
 
   <ItemGroup>
